modificando para agencia cx o portifólio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
-    <title>GooWin Sites models</title>
+    <title>Agência CX Sites models</title>
   </head>
   <body>
     <header>
@@ -16,21 +16,21 @@
     <aside>
       <div class="container-aside">
         <div class="link-menu-lateral">
-          <a href="https://agenciagoowin.vercel.app/" target="_blank">
+          <a href="https://agenciacx.vercel.app/" target="_blank">
             <ion-icon class="ionicons" name="home-outline"></ion-icon>
-            <h5>GooWin</h5>
+            <h5>Agência CX</h5>
           </a>
         </div>
         <div class="link-menu-lateral">
-          <a href="#">
-            <ion-icon class="ionicons" name="server-outline"></ion-icon>
-            <h5>Aplicativos</h5>
+          <a href="https://agenciagoowin.vercel.app/form-pre-brifing.html" target="_blank">
+            <ion-icon class="ionicons" name="briefcase-outline"></ion-icon>
+            <h5>Brifing</h5>
           </a>
         </div>
         <div class="link-menu-lateral">
-          <a href="#">
-            <ion-icon class="ionicons" name="diamond-outline"></ion-icon>
-            <h5>Sites</h5>
+          <a href="https://wa.me/5531984775695" target="_blank">
+          <ion-icon class="ionicons" name="logo-whatsapp"></ion-icon>
+            <h5>Conversar</h5>
           </a>
         </div>
       </div>
@@ -38,7 +38,7 @@
     <main>
       <section>
         <div class="title">
-          <h3>Modelos de Mini sites</h3>
+          <h3>Demonstrativo de Modelos Mini Sites</h3>
           <p>Clique nos botões para visitar alguns</p>
         </div>
 
@@ -150,7 +150,7 @@
           </div>
         </div>
 
-        <div class="ficha-site">
+        <!-- <div class="ficha-site">
           <div class="container-descricao">
             <h3>Empresa Spark</h3>
             <p>Categoria: Hospedagem de sites</p>
@@ -166,9 +166,9 @@
               </button></a
             >
           </div>
-        </div>
+        </div> -->
 
-        <div class="ficha-site">
+        <!-- <div class="ficha-site">
           <div class="container-descricao">
             <h3>JS life</h3>
             <p>Categoria: Clínica odonto</p>
@@ -184,7 +184,7 @@
               </button></a
             >
           </div>
-        </div>
+        </div> -->
 
         <div class="ficha-site">
           <div class="container-descricao">
@@ -329,21 +329,21 @@
     <footer>
       <div class="container-footer">
         <div class="link-menu-lateral">
-          <a href="https://agenciagoowin.vercel.app/" target="_blank">
+          <a href="https://agenciacx.vercel.app/" target="_blank">
             <ion-icon class="ionicons" name="home-outline"></ion-icon>
-            <h5>GooWin</h5>
+            <h5>Agência CX</h5>
           </a>
         </div>
         <div class="link-menu-lateral">
-          <a href="#">
-            <ion-icon class="ionicons" name="server-outline"></ion-icon>
-            <h5>Aplicativos</h5>
-          </a>
+          <a href="https://wa.me/5531984775695" target="_blank">
+            <ion-icon class="ionicons" name="logo-whatsapp"></ion-icon>
+              <h5>Conversar</h5>
+            </a>
         </div>
         <div class="link-menu-lateral">
-          <a href="#">
-            <ion-icon class="ionicons" name="diamond-outline"></ion-icon>
-            <h5>Sites</h5>
+          <a href="https://agenciagoowin.vercel.app/form-pre-brifing.html" target="_blank">
+            <ion-icon class="ionicons" name="briefcase-outline"></ion-icon>
+            <h5>Brifing</h5>
           </a>
         </div>
       </div>
