--- a/index.html
+++ b/index.html
@@ -223,6 +223,23 @@
         </div>
         <div class="ficha-site">
           <div class="container-descricao">
+            <h3>Goowin</h3>
+            <p>Categoria: Prestação de serviços</p>
+            <p>Data de criação: 11/08/2024</p>
+          </div>
+          <div class="container-botao">
+            <a
+              href="https://agenciagoowin.vercel.app/index.html"
+              target="_blank"
+              class="link-button"
+              ><button class="button-ficha">
+               Ver o Site
+              </button></a
+            >
+          </div>
+        </div>
+        <div class="ficha-site">
+          <div class="container-descricao">
             <h3>Currículo Web de Humberto Brito</h3>
             <p>Categoria: Prestação de serviços</p>
             <p>Data de criação: 2/03/2024</p>
