--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </div>
         <div class="ficha-site">
           <div class="container-descricao">
-            <h3>Currículo Web de Humberto Brito</h3>
+            <h3>Currículo Web de Humberto Carvalho</h3>
             <p>Categoria: Prestação de serviços</p>
             <p>Data de criação: 2/03/2024</p>
           </div>
@@ -310,7 +310,7 @@
         </div>
         <div class="ficha-site">
           <div class="container-descricao">
-            <h3>Site Linktree de Humberto Brito</h3>
+            <h3>Site Linktree de Humberto Carvalho</h3>
             <p>Categoria: Comercial-vendas</p>
             <p>Data de criação: 21/07/2024</p>
           </div>
@@ -352,15 +352,15 @@
           </a>
         </div>
         <div class="link-menu-lateral">
-          <a href="https://wa.me/5531984775695" target="_blank">
-            <ion-icon class="ionicons" name="logo-whatsapp"></ion-icon>
-              <h5>Conversar</h5>
+            <a href="https://agenciagoowin.vercel.app/form-pre-brifing.html" target="_blank">
+              <ion-icon class="ionicons" name="briefcase-outline"></ion-icon>
+              <h5>Brifing</h5>
             </a>
         </div>
         <div class="link-menu-lateral">
-          <a href="https://agenciagoowin.vercel.app/form-pre-brifing.html" target="_blank">
-            <ion-icon class="ionicons" name="briefcase-outline"></ion-icon>
-            <h5>Brifing</h5>
+          <a href="https://wa.me/5531984775695" target="_blank">
+            <ion-icon class="ionicons" name="logo-whatsapp"></ion-icon>
+              <h5>Conversar</h5>
           </a>
         </div>
       </div>
