colocando link do form brifing correto que lava para agência CX

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </a>
         </div>
         <div class="link-menu-lateral">
-          <a href="https://agenciagoowin.vercel.app/form-pre-brifing.html" target="_blank">
+          <a href="https://agenciacx.vercel.app/form-pre-brifing.html" target="_blank">
             <ion-icon class="ionicons" name="briefcase-outline"></ion-icon>
             <h5>Brifing</h5>
           </a>
@@ -360,7 +360,7 @@
           </a>
         </div>
         <div class="link-menu-lateral">
-            <a href="https://agenciagoowin.vercel.app/form-pre-brifing.html" target="_blank">
+            <a href="https://agenciacx.vercel.app/form-pre-brifing.html" target="_blank">
               <ion-icon class="ionicons" name="briefcase-outline"></ion-icon>
               <h5>Brifing</h5>
             </a>
