integrando e recuperando o site Maysa-notion

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="container-botao">
             <a
-              href="https://demostre.vercel.app/landing-page-np/index.html"
+              href="site-maysa-notion/index.html"
               target="_blank"
               class="link-button"
               ><button class="button-ficha">
@@ -76,7 +76,7 @@
           </div>
           <div class="container-botao">
             <a
-              href="https://hubertbrito.github.io/atendimento/pousada-esteluna/inicio.html"
+              href="pousada-esteluna/inicio.html"
               target="_blank"
               class="link-button"
               ><button class="button-ficha">
