--- a/checklist-proposta-servico/prop-otica-gabriel.html
+++ b/checklist-proposta-servico/prop-otica-gabriel.html
@@ -66,7 +66,7 @@
                 <li><strong>Entrada da Mão de Obra:</strong> R$ 390,00 (trezentos e noventa reais).</li>
                 <li><strong>Hospedagem e Nome de Domínio (Pagamento Anual):</strong> R$ 180,00 (cento e oitenta reais).</li>
                 <li><strong>Valor Total Inicial: R$ 570,00 (quinhentos e setenta reais)</strong></li>
-                <li><strong>Próximo Passo:</strong> Ao final desta proposta, preencha o formulário com seu nome completo, CPF e e-mail, e marque o aceite. Após o envio, você receberá o boleto bancário e a chave Pix para pagamento em até 6 horas, tanto no e-mail informado quanto por WhatsApp.</li>
+                <li><strong>Próximo Passo:</strong> Ao final desta proposta, preencha o formulário com seu nome completo, CPF e e-mail, e marque o aceite. Após o envio, você receberá o boleto bancário e a chave Pix para pagamento, tanto no e-mail informado quanto por WhatsApp.</li>
             </ul>
             <h3>Saldo Remanescente da Mão de Obra e Configuração Google Ads:</h3>
             <p>O saldo de <strong>R$ 510,00 (quinhentos e dez reais)</strong> será devido na conclusão e entrega dos três componentes (vitrine virtual, site institucional e blog com os três artigos iniciais), bem como na conclusão da configuração inicial da campanha Google Ads e Meta ads.</p>
