subindo a prop. de serviço da duda calçados

--- a/checklist-proposta-servico/checklist-salao-sd.html
+++ b/checklist-proposta-servico/checklist-salao-sd.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checklist de Desenvolvimento</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="checklist-section.css">
+    <link rel="stylesheet" href="checklist.css">
+   
 </head>
 <body>
     <h1>Checklist de Desenvolvimento da Loja Virtual</h1>
     <form class="ckecklist-form" id="checklist-form">
         <label><input type="checkbox" id="etapa1" checked> Compra da Hospedagem e Domínio</label><br>
-        <label><input type="checkbox" id="etapa2"> Pagamento da Entrada 1º parcela</label><br>
+        <label><input type="checkbox" id="etapa2" checked> Pagamento da Entrada 1º parcela</label><br>
         <label><input type="checkbox" id="etapa3"> Instalação do WordPress e Plugins Essenciais</label><br>
         <label><input type="checkbox" id="etapa4"> Configuração gerais da loja, pagamentos, checkout, e envio</label><br>
         <label><input type="checkbox" id="etapa5"> Escolha e instalação do Template</label><br>
