--- a/checklist-proposta-servico/prop-salao-sd.html
+++ b/checklist-proposta-servico/prop-salao-sd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proposta de Serviço</title>
-    <link rel="stylesheet" href="prop-otica-gabriel.css">
+    <link rel="stylesheet" href="style-global.css">
 </head>
 <body style="display: flex;">
     <div class="container">
