retificndo uma ortografia

--- a/checklist-proposta-servico/prop-dudacalcados.html
+++ b/checklist-proposta-servico/prop-dudacalcados.html
@@ -54,7 +54,7 @@
                 <li>Gestão Contínua de Redes Sociais.</li>
                 <li>Gestão Contínua de Campanhas de Tráfego Pago (Google Ads e Meta Ads), incluindo otimizações e relatórios.</li>
                 <li>Cadastro Contínuo de Produtos na Vitrine Virtual.</li>
-                <li>Desenvolvimento de Funcionalidades Adicionais na Vitrine Virtual (melhotias e otimizações).</li>
+                <li>Desenvolvimento de Funcionalidades Adicionais na Vitrine Virtual (melhorias e otimizações).</li>
             </ul>
         </section>
 
