--- a/checklist-proposta-servico/checklist-salao-sd.html
+++ b/checklist-proposta-servico/checklist-salao-sd.html
@@ -22,9 +22,9 @@
         <label><input type="checkbox" id="etapa5" checked> Configuração gerais da loja, pagamentos, checkout, e envio</label><br>
         <label><input type="checkbox" id="etapa6"  checked> Personalização do Template e layout</label><br>
         <label><input type="checkbox" id="etapa7" checked> Cadastro dos Produtos</label><br>
-        <label><input type="checkbox" id="etapa8" class="checkbox-laranja"> Configuração de Documentação Fiscal</label><br>
-        <label><input type="checkbox" id="etapa9" class="checkbox-laranja"> Configuração de emails transacionais</label><br>
-        <label><input type="checkbox" id="etapa10" class="checkbox-laranja"> Testes e Ajustes Finais</label><br>
+        <label><input type="checkbox" id="etapa8" class="checkbox-laranja" checked> Configuração de Documentação Fiscal</label><br>
+        <label><input type="checkbox" id="etapa9" class="checkbox-laranja" checked> Configuração de emails transacionais</label><br>
+        <label><input type="checkbox" id="etapa10" class="checkbox-laranja" checked> Testes e Ajustes Finais</label><br>
         <label><input type="checkbox" id="etapa11"> Publicação da Loja Virtual</label><br>
         <label><input type="checkbox" id="etapa12"> Integração da Loja com o Site</label><br>
         <label><input type="checkbox" id="etapa13"> Configuração das Campanhas Publicitária</label><br>
