--- a/checklist-proposta-servico/prop-salao-taylon.html
+++ b/checklist-proposta-servico/prop-salao-taylon.html
@@ -82,12 +82,12 @@
                         <tr>
                             <td style="padding: 10px; border: 1px solid #ddd;">**1º Mês**</td>
                             <td style="padding: 10px; border: 1px solid #ddd;">Parcela Inicial + Tx. Ativação</td>
-                            <td style="padding: 10px; border: 1px solid #ddd;">R$ [Valor] + R$ 150,00</td>
+                            <td style="padding: 10px; border: 1px solid #ddd;">R$ [Parc.] + 150,00</td>
                         </tr>
                         <tr>
                             <td style="padding: 10px; border: 1px solid #ddd;">**Pós-Pub. do Site**</td>
                             <td style="padding: 10px; border: 1px solid #ddd;">Parcela Mensal + Manut. Essencial</td>
-                            <td style="padding: 10px; border: 1px solid #ddd;">R$ [Valor] + R$ 30,00</td>
+                            <td style="padding: 10px; border: 1px solid #ddd;">R$ [Parc.] + R$ 30,00</td>
                         </tr>
                         <tr>
                             <td style="padding: 10px; border: 1px solid #ddd;">**Pós-Parcelamento**</td>
