--- a/checklist-proposta-servico/prop-salao-taylon.html
+++ b/checklist-proposta-servico/prop-salao-taylon.html
@@ -118,23 +118,23 @@
                 <div class="input-group">
                     <p><strong>Opções de Pagamento:</strong></p>
                     <label>
-                        <input type="checkbox" name="opcao_pagamento[]" value="Pagamento à vista" required>
-                        Pagamento à vista
+                        <input type="checkbox" name="opcao_pagamento[]" value="Pagamento à vista">
+                        Pagamento à vista R$ 500,00
                     </label>
                     <label>
-                        <input type="checkbox" name="opcao_pagamento[]" value="2x de R$ 280,00 - Total R$ 560,00" required>
+                        <input type="checkbox" name="opcao_pagamento[]" value="2x de R$ 280,00 - Total R$ 560,00">
                         2 parcelas de R$ 280,00 - Total R$ 560,00
                     </label>
                     <label>
-                        <input type="checkbox" name="opcao_pagamento[]" value="4x de R$ 70,00 - Total R$ 680,00" required>
+                        <input type="checkbox" name="opcao_pagamento[]" value="4x de R$ 70,00 - Total R$ 680,00">
                         4 parcelas de R$ 70,00 - Total R$ 680,00
                     </label>
                     <label>
-                        <input type="checkbox" name="opcao_pagamento[]" value="6x de R$ 120,00 - Total R$ 720,00" required>
+                        <input type="checkbox" name="opcao_pagamento[]" value="6x de R$ 120,00 - Total R$ 720,00">
                         6 parcelas de R$ 120,00 - Total R$ 720,00
                     </label>
                     <label>
-                        <input type="checkbox" name="opcao_pagamento[]" value="8x de R$ 100,00 - Total R$ 800,00" required>
+                        <input type="checkbox" name="opcao_pagamento[]" value="8x de R$ 100,00 - Total R$ 800,00">
                         8 parcelas de R$ 100,00 - Total R$ 800,00
                     </label>
                     <p><strong>Forma de Pagamento:</strong> Boleto bancário.</p>
@@ -143,7 +143,7 @@
                 <div class="input-group">
                     <label>
                         <p><strong>Data de Vencimento do Boleto:</strong> Digite o dia do mês desejado</p>
-                        <input type="text" name="data_vencimento" placeholder="Ex: Dia 10">
+                        <input type="text" name="data_vencimento" placeholder="Ex: Dia 10" required>
                     </label>
                 </div>
 
