--- a/checklist-proposta-servico/prop-salao-taylon.html
+++ b/checklist-proposta-servico/prop-salao-taylon.html
@@ -127,7 +127,7 @@
                     </label>
                     <label>
                         <input type="checkbox" name="opcao_pagamento[]" value="4x de R$ 70,00 - Total R$ 680,00">
-                        4 parcelas de R$ 70,00 - Total R$ 680,00
+                        4 parcelas de R$ 170,00 - Total R$ 680,00
                     </label>
                     <label>
                         <input type="checkbox" name="opcao_pagamento[]" value="6x de R$ 120,00 - Total R$ 720,00">
@@ -160,7 +160,7 @@
 
         <section class="secao-principal finalizacao">
             <h3 class="item-title">Próximos Passos</h3>
-            <p class="item-paragraph">Para darmos início ao projeto, conforme combinado, aguardo a sua confirmação. Após a confirmação, o primeiro boleto do serviço será emitido de acordo com a sua escolha de parcelamento. Estou à disposição para qualquer dúvida!</p>
+            <p class="item-paragraph">Para darmos início ao projeto, conforme combinado, aguardo a sua confirmação. Após a confirmação, o primeiro boleto será emitido de acordo com a sua escolha de parcelamento e após o paganto do primeiro boleto o serviço será iniciado. Estou à disposição para qualquer dúvida!</p>
         </section>
     </div>
 </body>
