--- a/checklist-proposta-servico/prop-salao-taylon.html
+++ b/checklist-proposta-servico/prop-salao-taylon.html
@@ -26,9 +26,8 @@
 
         <section class="secao-principal informacoes-destinatario">
             <h2>Para:</h2>
-            <p><strong>Maria do Carmo</strong></p>
-            <p>Salão Sensível Diferença</p>
-            <p>Endereço: Rua Romualdo Lopes Cansado, 283, Bairro Castelo, Belo Horizonte, MG, Brasil</p>
+            <p><strong>Salão Taylon</strong>
+            <p>Endereço: Rua Romualdo Lopes Cançado 283, Bairro Castelo, Belo Horizonte MG</p>
             <p>CEP: 31360-310</p>
         </section>
 
@@ -49,7 +48,7 @@
 
         <section class="secao-principal cronograma">
             <h3 class="item-title">4. Prazo de Entrega</h3>
-            <p class="item-paragraph">O prazo de entrega é de <strong>24 a 36 dias úteis</strong>, podendo haver variações dependendo de fatores inerentes ao desenvolvimento de software e à configuração das campanhas online.</p>
+            <p class="item-paragraph">O prazo de entrega é de <strong>30 a 45 dias úteis</strong>, podendo haver variações dependendo de fatores inerentes ao desenvolvimento de software e à configuração das campanhas online.</p>
         </section>
 
         <section class="secao-principal investimento">
